cluster/apps/home-cloud/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: home-cloud
spec:
  ports:
  - name: http
    port: 8123
    targetPort: 8123
