cluster/apps/home-cloud/homeassistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: home-cloud
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    name: homeassistant
spec:
  ingressClassName: "nginx-public"
  rules:
    - host: &host "homeassistant.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: homeassistant
                port:
                  name: http
  tls:
    - hosts:
        - *host
      secretName: homeassistant-tls
